# Dragonfly

./: .gitignore  .gitmodules  CMakeLists.txt
Modules/Platform/: CMakeLists.txt
Modules/Platform/Include/Platform/: Codec.h  Core.h  IO.h  Text.h
Modules/Platform/Src/Codec/: PNG.c
Modules/Platform/Src/Core/: Arena.c  Error.c  Logger.c  Math.c
Modules/Platform/Src/IO/: File.c
Modules/Platform/Src/Text/: String.c  StringBuilder.c
Resources/: pyramid.xml  scene.xml  shader.wgsl  triangle.xml
Src/: index.html  main.c  main.js
Src/Aspect/: Actor.h  Aspect.c  Aspect.h  AspectGLFW.c  Behavior.c  Behavior.h  Camera.c  Camera.h  Entity.h  Graph.c  Graph.h  Internal.c  Internal.h  Material.c  Material.h  MetalAdapter.m  PlatformSpecifics.c  PlatformSpecifics.h  RenderBatch.h  RenderContext.c  RenderContext.h  Renderer.c  Renderer.h  Scene.c  Scene.h  SceneNode.c  SceneNode.h  SceneNodeIterator.c  SceneNodeIterator.h  SceneXml.c  StaticMesh.c  StaticMesh.h  Transform.h  Types.h  WGPUUtils.c  WGPUUtils.h
Src/aspectJS/: Logger.js  application.js  camera.js  documentProvider.js  eventBus.js  inputSettings.js  math.js  mesh.js  renderer.js  scene.js  transform.js  userInterfaceController.js  webgpu.js
Src/aspectJS/webgpu/: Material.js
